--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ syrupy = "^4.5.0"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.5.1"
+types-python-slugify = "^8.0.0.3"
+types-requests = "^2.31.0.10"
 
 [tool.ruff]
 src = ["src", "tests"]
